# poranges_py

./: Cargo.toml  README.md  pyproject.toml
docs/: polars-bio-differences.md
polaranges/: __init__.py  accessors.py
poranges/: __init__.py  _api.py  accessors.py
scripts/: bench_bed_overlap_python.py  install-local.sh
src/: lib.rs
tests/: test_api.py
tests/property/: __init__.py  conftest.py  genomic.py  test_genomic.py  test_nearest.py  test_overlap_against_polars_bio.py  test_overlaps.py
