[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "poranges"
version = "0.1.1"
description = "Python bindings that extend Polars DataFrames with poranges operations."
requires-python = ">=3.11"
dependencies = ["polars==1.39.3"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.maturin]
module-name = "poranges._poranges"
bindings = "pyo3"
python-source = "."
sdist = true
