[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "polaranges"
version = "0.1.1"
description = "Python bindings that extend Polars DataFrames with polaranges operations."
requires-python = ">=3.11"
dependencies = ["polars==1.39.3"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
  "hypothesis>=6.0",
  "polars-bio>=0.29",
  "pytest>=8.0",
]
develop = [
  "hypothesis>=6.0",
  "polars-bio>=0.29",
  "pytest>=8.0",
]

[tool.maturin]
module-name = "polaranges._polaranges"
bindings = "pyo3"
python-source = "."
sdist = true
